// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponseRule assertion helpers failing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200",
        "kind": "response",
      },
      "value": {
        "description": "hello",
        "statusCode": "200",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "Could not find a partial match in header parameters with name isgood. Value to match: {"description":"Matcher.string"}",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request",
    "passed": false,
    "received": undefined,
    "severity": "error",
    "type": "requirement",
    "where": "GET /api/users response 200",
  },
]
`;

exports[`ResponseRule assertion helpers inverted assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200",
        "kind": "response",
      },
      "value": {
        "description": "hello",
        "statusCode": "200",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request",
    "passed": true,
    "received": undefined,
    "severity": "error",
    "type": "requirement",
    "where": "GET /api/users response 200",
  },
]
`;

exports[`ResponseRule assertion helpers passing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200",
        "kind": "response",
      },
      "value": {
        "description": "hello",
        "statusCode": "200",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request",
    "passed": true,
    "received": undefined,
    "severity": "error",
    "type": "requirement",
    "where": "GET /api/users response 200",
  },
]
`;

exports[`ResponseRule header assertions added failing assertion 1`] = `
[
  {
    "change": {
      "added": {
        "name": "isnotsogood",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "isnotsogood",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "isnotsogood",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/isnotsogood",
        "kind": "response-header",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "header does not have \`description\`",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response header type",
    "passed": false,
    "received": undefined,
    "severity": "error",
    "type": "added",
    "where": "GET /api/users response 200 response header: isnotsogood",
  },
]
`;

exports[`ResponseRule header assertions added passing assertion 1`] = `
[
  {
    "change": {
      "added": {
        "description": "yes",
        "name": "isgood",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "isgood",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "isgood",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/isgood",
        "kind": "response-header",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response header type",
    "passed": true,
    "received": undefined,
    "severity": "error",
    "type": "added",
    "where": "GET /api/users response 200 response header: isgood",
  },
]
`;

exports[`ResponseRule header assertions addedOrChanged failing assertion 1`] = `
[
  {
    "change": {
      "added": {
        "name": "isnotsogood",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "isnotsogood",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "isnotsogood",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/isnotsogood",
        "kind": "response-header",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "header does not have \`description\`",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response header type",
    "passed": false,
    "received": undefined,
    "severity": "warn",
    "type": "added",
    "where": "GET /api/users response 200 response header: isnotsogood",
  },
]
`;

exports[`ResponseRule header assertions addedOrChanged passing assertion 1`] = `
[
  {
    "change": {
      "changeType": "changed",
      "changed": {
        "after": {
          "description": "yes",
          "name": "isgood",
          "schema": {
            "type": "number",
          },
        },
        "before": {
          "description": "yes",
          "name": "isgood",
          "schema": {
            "type": "string",
          },
        },
      },
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "isgood",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "isgood",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/isgood",
        "kind": "response-header",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response header type",
    "passed": true,
    "received": undefined,
    "severity": "warn",
    "type": "changed",
    "where": "GET /api/users response 200 response header: isgood",
  },
]
`;

exports[`ResponseRule header assertions changed failing assertion 1`] = `
[
  {
    "change": {
      "changeType": "changed",
      "changed": {
        "after": {
          "description": "yes",
          "name": "isgood",
          "required": true,
        },
        "before": {
          "description": "yes",
          "name": "isgood",
        },
      },
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "isgood",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "isgood",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/isgood",
        "kind": "response-header",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "must not make header optional -> required",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header required type",
    "passed": false,
    "received": undefined,
    "severity": "error",
    "type": "changed",
    "where": "GET /api/users response 200 response header: isgood",
  },
]
`;

exports[`ResponseRule header assertions changed passing assertion 1`] = `
[
  {
    "change": {
      "changeType": "changed",
      "changed": {
        "after": {
          "description": "yes",
          "name": "isgood",
        },
        "before": {
          "description": "yes",
          "name": "isgood",
          "required": true,
        },
      },
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "isgood",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "isgood",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/isgood",
        "kind": "response-header",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header required type",
    "passed": true,
    "received": undefined,
    "severity": "error",
    "type": "changed",
    "where": "GET /api/users response 200 response header: isgood",
  },
]
`;

exports[`ResponseRule header assertions does not get double called for each body 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "isgood",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "isgood",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/isgood",
        "kind": "response-header",
      },
      "value": {
        "description": "yes",
        "name": "isgood",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response header type",
    "passed": true,
    "received": undefined,
    "severity": "error",
    "type": "requirement",
    "where": "GET /api/users response 200 response header: isgood",
  },
]
`;

exports[`ResponseRule header assertions removed failing assertion 1`] = `
[
  {
    "change": {
      "changeType": "removed",
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "isgood",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "isgood",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/isgood",
        "kind": "response-header",
      },
      "removed": {
        "before": {
          "description": "yes",
          "name": "isgood",
          "required": true,
        },
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "cannot remove required header",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response header removal",
    "passed": false,
    "received": undefined,
    "severity": "error",
    "type": "removed",
    "where": "GET /api/users response 200 response header: isgood",
  },
]
`;

exports[`ResponseRule header assertions removed passing assertion 1`] = `
[
  {
    "change": {
      "changeType": "removed",
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "isgood",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "isgood",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/isgood",
        "kind": "response-header",
      },
      "removed": {
        "before": {
          "description": "yes",
          "name": "isgood",
        },
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response header removal",
    "passed": true,
    "received": undefined,
    "severity": "error",
    "type": "removed",
    "where": "GET /api/users response 200 response header: isgood",
  },
]
`;

exports[`ResponseRule header assertions requirement failing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "isnotsogood",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "isnotsogood",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/isnotsogood",
        "kind": "response-header",
      },
      "value": {
        "name": "isnotsogood",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "header does not have \`description\`",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response header type",
    "passed": false,
    "received": undefined,
    "severity": "error",
    "type": "requirement",
    "where": "GET /api/users response 200 response header: isnotsogood",
  },
]
`;

exports[`ResponseRule header assertions requirement passing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "isgood",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "isgood",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/isgood",
        "kind": "response-header",
      },
      "value": {
        "description": "yes",
        "name": "isgood",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response header type",
    "passed": true,
    "received": undefined,
    "severity": "error",
    "type": "requirement",
    "where": "GET /api/users response 200 response header: isgood",
  },
]
`;
